Add publishing script

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "disabled:install": "node misc/validate-commit.install.js",
     "test": "karma start karma.conf.js",
     "api-doc-tdd": "jasmine-node misc/api-doc.spec.js --autotest --watch misc/api-doc-test-cases/*.ts misc/api-doc.js",
-    "api-doc-test": "jasmine-node misc/api-doc.spec.js"
+    "api-doc-test": "jasmine-node misc/api-doc.spec.js",
+    "build:publish": "gulp build && bash scripts/publish.sh"
   },
   "repository": {
     "type": "git",
