Removes modal classes on a delay

--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "@angular/forms": "4.0.3"
   },
   "devDependencies": {
+    "@angular/core": "4.0.3",
+    "@angular/common": "4.0.3",
+    "@angular/forms": "4.0.3",
     "@angular/compiler": "4.0.3",
     "@angular/compiler-cli": "4.0.3",
     "@angular/http": "4.0.3",
